--- a/index.html
+++ b/index.html
@@ -21,28 +21,33 @@
                         <div class="logo-name">QUICKLINK</div>
                     </div>
                     <div class="menu">
-                        <div class="menu-item">Что это?</div>
-                        <div class="menu-item">Как это выглядит?</div>
-                        <div class="menu-item">Сколько стоит?</div>
-                        <div class="menu-item">FAQ</div>
+                        <div class="menu-item">
+                            <a href="">Что это?</a>
+                        </div>
+                        <div class="menu-item">
+                            <a href="">Как это выглядит?</a>
+                        </div>
+                        <div class="menu-item">
+                            <a href="">Сколько стоит?</a>
+                        </div>
+                        <div class="menu-item">
+                            <a href="">FAQ</a>
+                        </div>
                     </div>
                 </div>
                 <div class="right-side">
-                    <input type="checkbox" id="check">
-                    <label for="check">
+                    <input type="checkbox" id="check" class="check">
+                    <label for="check" class="label">
                         <div class="right-side-button2">
-                            <img src="./icons/icon-burger.svg" alt="Icon Burger" class="burger-icon">
+                            <img src="./icons/icon-burger.svg" alt="" class="icon-burger">
+                            <img src="./icons/cross.svg" alt="" class="icon-cross">
                         </div>
                     </label> 
                     <div class="right-side-button1">
                         <img src="./icons/right-icon.svg" alt="Icon" class="right-icon">  
                     </div>
                     <div class="burger-menu">
-                        <div class="button-cross-wrapper">
-                            <div class="burger-button-cross">
-                                <img src="./icons/cross.svg" alt="">
-                            </div>
-                        </div>
+                        <div class=""></div>
                         <div class="burger-menu-items">
                             <div class="burger-menu-item first">
                                 <div>Вход</div>
@@ -76,6 +81,9 @@
                                 Присоединяйся к более 50 млн. людей <br>и делись всем, что ты создаешь, 
                                 курируешь <br>или продаешь онлайн. Все в одной ссылке.
                             </div>
+                        </div>
+                        <div class="about-photo">
+                            <img src="./icons/about-photo.svg" alt="">
                         </div>
                     </div>
                     <div class="about-bottom">
@@ -249,31 +257,31 @@
                             <div class="logo-name">QUICKLINK</div>
                         </div>
                         <div class="social-links-icons">
-                            <img src="./icons/icon-fb.svg" alt="Icin Facebook">
-                            <img src="./icons/icon-tw.svg" alt="Icon Twitter">
-                            <img src="./icons/icon-insta.svg" alt="Icon Instagramm">
-                            <img src="./icons/icon-yt.svg" alt="Icon YouTube">
+                            <a href=""><img src="./icons/icon-fb.svg" alt="Icin Facebook"></a>
+                            <a href=""><img src="./icons/icon-tw.svg" alt="Icon Twitter"></a>
+                            <a href=""><img src="./icons/icon-insta.svg" alt="Icon Instagramm"></a>
+                            <a href=""><img src="./icons/icon-yt.svg" alt="Icon YouTube"></a>
                         </div>
                     </div>
                     <div class="footer-info">
-                        <div class="question">Что это?</div>
-                        <div class="question">Как это работает?</div>
-                        <div class="question">Сколько стоит?</div>
-                        <div class="question">FAQ</div>
+                        <div class="question"><a href="">Что это?</a></div>
+                        <div class="question"><a href="">Как это работает?</a></div>
+                        <div class="question"><a href="">Сколько стоит?</a></div>
+                        <div class="question"><a href="">FAQ</a></div>
                     </div>
                 </div>
                 <div class="footer-wrapper">
                     <div class="footer-info">
-                        <div class="document">Перс. данные</div>
-                        <div class="document">Безопасность</div>
-                        <div class="document">Документы</div>
-                        <div class="document">Политика отмены</div>
+                        <div class="document"><a href="">Перс. данные</a></div>
+                        <div class="document"><a href="">Безопасность</a></div>
+                        <div class="document"><a href="">Документы</a></div>
+                        <div class="document"><a href="">Политика отмены</a></div>
                     </div>
                     <div class="footer-info">
-                        <div class="info1">Поддержка</div>
-                        <div class="info1">Компания</div>
-                        <div class="info1">Вакансии</div>
-                        <div class="info1">Партнерам</div>
+                        <div class="info1"><a href="">Поддержка</a></div>
+                        <div class="info1"><a href="">Компания</a></div>
+                        <div class="info1"><a href="">Вакансии</a></div>
+                        <div class="info1"><a href="">Партнерам</a></div>
                     </div>
                 </div>
             </div>
