--- a/index.html
+++ b/index.html
@@ -134,9 +134,73 @@
 
         <section class="mt-80">
             <div class="container">
-                <div class="work-experience">
+                <div class="work-experience-wrapper">
                     <div class="work-experience-top">
-                        <img src="./images/MNite.png" alt="Mikle Nite">
+                        <div class="item">
+                            <div class="project-photo">
+                                <img src="./images/ArrivalDashboard.png" alt="">
+                            </div>
+                            <div class="project">
+                                <h2 class="project-name">Arrival Dashboard</h2>
+                                <p class="project-description">В качестве лид-разработчика участвовал в создании и
+                                    развитии
+                                    систем аналитики для британского стартапа</p>
+                                <div class="show-project">
+                                   <div class="button">
+                                        <a href="">Посмотреть</a>
+                                        <img src="./icons/Vector.png" alt="">
+                                    </div>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-experience">
+                            <h3>опыт работы</h3>
+                            <div class="job-list">
+                                <div class="job">
+                                    <div class="company">
+                                        <span>Arrival</span>
+                                        <span class="period">(2021-по наст. время)</span>
+                                    </div>
+                                    <div class="company-link">
+                                        <a href="https://arrival.com">arrival.com</a>
+                                    </div>
+                                    <div class="position">Senior Front-End разработчик</div>
+                                </div>
+                                <div class="job">
+                                    <div class="company">
+                                        <span>Apple</span>
+                                        <span class="period">(2018-2021)</span>
+                                    </div>
+                                    <div class="company-link">
+                                        <a href="https://apple.com">apple.com</a>
+                                    </div>
+                                    <div class="position">Middle+ Front-End разработчик</div>
+                                </div>
+                                <div class="job">
+                                    <div class="company">
+                                        <span>IBM</span>
+                                        <span class="period">(2017-2018)</span>
+                                    </div>
+                                    <div class="company-link">
+                                        <a href="https://ibm.com">ibm.com</a>
+                                    </div>
+                                    <div class="position">Middle Front-End разработчик</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="about-me">
+                            <div class="photo">
+                                <img src="./images/Avatar.png" alt="Фото Майкл Найт" class="my-photo">
+                            </div>
+                            <div class="short-description">
+                                <h1 class="my-name">Майкл Найт</h1>
+                                <p class="description">Помогу превратить программирование из хобби в прибыльную профессию</p>
+                                <div class="write-action">
+                                    <a href="" >Написать</a>
+                                    <img src="./icons/Vector.png" alt="" class="vector">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="work-experience-bottom">
                         <div class="work-experience-bottom-span">
